--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --quiet index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tape": "nodemon --quiet test-runner-babel tests/**.js | tap-spec",
+    "test": "nodemon --quiet test-runner-babel tests/**.js | faucet"
   },
   "keywords": [
     "number-theory",
@@ -16,12 +17,13 @@
   ],
   "author": "Anton Vynogradenko <restuta8@gmail.com> (http://restuta.me)",
   "license": "ISC",
-  "dependencies" : {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
-    "nodemon": "^1.8.1"
+    "faucet": "0.0.1",
+    "nodemon": "^1.8.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.4.0"
   }
 }
