--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   ],
   "author": "Anton Vynogradenko <restuta8@gmail.com> (http://restuta.me)",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "immutable": "^3.7.6",
+    "lodash": "^3.10.1"
+  },
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
