--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-partitioner",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "Gernerates partitions for positive interger (https://en.wikipedia.org/wiki/Partition_(number_theory))",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,10 @@
     "generator",
     "partitions"
   ],
+  "repository": {
+    "type": "git",
+    "url" : "git+https://github.com/Restuta/number-partitioner"
+  },
   "author": "Anton Vynogradenko <restuta8@gmail.com> (http://restuta.me)",
   "license": "ISC",
   "dependencies": {
